trunk/Archive/fce52971e313e359a954211fa1bfdc46-33b4cbe19781f01ba4cd6b54756ad974/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:1:1: error: expected unqualified-id before numeric constant
 10
 ^
